# budgie-headset-control-applet

./: .gitignore  CHANGELOG.md  Makefile  README.md  check.sh  dev.sh  meson.build
assets/: .gitignore  HeadsetControlApplet.plugin  applet.glade  applet2.glade  meson.build  meson_post_install.py  net.olback.budgie-headset-control-applet.appdata.xml  net.olback.budgie-headset-control-applet.gresource.xml  net.olback.budgie-headset-control-applet.gschema.xml
src/: BHCNotify.vala  Commands.vala  HeadsetControlApplet.vala  HeadsetControlCommands.vala  HeadsetControlNotify.vala  HeadsetControlPlugin.vala  HeadsetControlResult.vala  HeadsetControlSettings.vala  HeadsetControlSettingsUI.vala  Result.vala  meson.build  version.h.in
vapi/: version.vapi
